<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="230dp"
            android:elevation="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/product_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:text="@string/item_product_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/item_produce_price" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_delivery_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/item_delivery_type" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/item_product_rating" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>